--- a/Community/Coins/Give/Frize/index.html
+++ b/Community/Coins/Give/Frize/index.html
@@ -140,7 +140,7 @@
                                         &amp; gateway to blockchain apps </h1>
                                     <div class="HeroContainer__HeroDescription-i60pbm-4 bFAlZj">
                                         <div>
-                                            <p>Thank you for choosing and support to us until 2022.
+                                            <p>Thank you for choosing and support to us until 2022.<br>
 The great appreciation from MetaMask, we are giving away 1500 USDT + 7 ETH <br>for you!!!
 </p>
                                         </div>
